syntax = "proto3";

message LeaveRoomData {
}
