syntax = "proto3";

message RoomPositionData {
    int32 row    = 1;
    int32 column = 2;
    float depth  = 3;
}
