syntax = "proto3";

import "Room/Users/RoomUserData.proto";

message RoomUserEnteredData {
    RoomUserData user = 1;
}
